vanilla-mod-merger/parser/paradox_parser.go
// Code generated from Paradox.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Paradox

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ParadoxParser struct {
	*antlr.BaseParser
}

var ParadoxParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func paradoxParserInit() {
	staticData := &ParadoxParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "'@:define'", "'@:insert'", "'@:register_variable'",
		"", "'@['", "']'", "'='", "'!='", "'>='", "'<='", "'>'", "'<'", "'{'",
		"'}'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "':'",
	}
	staticData.SymbolicNames = []string{
		"", "ID", "NUMBER", "STRING", "DEFINE", "INSERT", "REGISTER_VARIABLE",
		"VAR", "CALC_START", "CALC_END", "EQUALS", "NOT_EQUALS", "GTE", "LTE",
		"GT", "LT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "ADD", "SUB", "MUL",
		"DIV", "COLON", "COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"file", "statement", "assignment", "macroDefinition", "macroInsert",
		"variableDefinition", "calculation", "blockBody", "blockContents", "valueOnly",
		"key", "keyPart", "value", "comparator", "expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ParadoxParserInit initializes any static state used to implement ParadoxParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewParadoxParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ParadoxParserInit() {
	staticData := &ParadoxParserStaticData
	staticData.once.Do(paradoxParserInit)
}

// NewParadoxParser produces a new parser instance for the optional input antlr.TokenStream.
func NewParadoxParser(input antlr.TokenStream) *ParadoxParser {
	ParadoxParserInit()
	this := new(ParadoxParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ParadoxParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Paradox.g4"

	return this
}

// ParadoxParser tokens.
const (
	ParadoxParserEOF               = antlr.TokenEOF
	ParadoxParserID                = 1
	ParadoxParserNUMBER            = 2
	ParadoxParserSTRING            = 3
	ParadoxParserDEFINE            = 4
	ParadoxParserINSERT            = 5
	ParadoxParserREGISTER_VARIABLE = 6
	ParadoxParserVAR               = 7
	ParadoxParserCALC_START        = 8
	ParadoxParserCALC_END          = 9
	ParadoxParserEQUALS            = 10
	ParadoxParserNOT_EQUALS        = 11
	ParadoxParserGTE               = 12
	ParadoxParserLTE               = 13
	ParadoxParserGT                = 14
	ParadoxParserLT                = 15
	ParadoxParserLBRACE            = 16
	ParadoxParserRBRACE            = 17
	ParadoxParserLPAREN            = 18
	ParadoxParserRPAREN            = 19
	ParadoxParserADD               = 20
	ParadoxParserSUB               = 21
	ParadoxParserMUL               = 22
	ParadoxParserDIV               = 23
	ParadoxParserCOLON             = 24
	ParadoxParserCOMMENT           = 25
	ParadoxParserWS                = 26
)

// ParadoxParser rules.
const (
	ParadoxParserRULE_file               = 0
	ParadoxParserRULE_statement          = 1
	ParadoxParserRULE_assignment         = 2
	ParadoxParserRULE_macroDefinition    = 3
	ParadoxParserRULE_macroInsert        = 4
	ParadoxParserRULE_variableDefinition = 5
	ParadoxParserRULE_calculation        = 6
	ParadoxParserRULE_blockBody          = 7
	ParadoxParserRULE_blockContents      = 8
	ParadoxParserRULE_valueOnly          = 9
	ParadoxParserRULE_key                = 10
	ParadoxParserRULE_keyPart            = 11
	ParadoxParserRULE_value              = 12
	ParadoxParserRULE_comparator         = 13
	ParadoxParserRULE_expr               = 14
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext
	AllCOMMENT() []antlr.TerminalNode
	COMMENT(i int) antlr.TerminalNode
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_file
	return p
}

func InitEmptyFileContext(p *FileContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_file
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(ParadoxParserEOF, 0)
}

func (s *FileContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *FileContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *FileContext) AllCOMMENT() []antlr.TerminalNode {
	return s.GetTokens(ParadoxParserCOMMENT)
}

func (s *FileContext) COMMENT(i int) antlr.TerminalNode {
	return s.GetToken(ParadoxParserCOMMENT, i)
}

func (s *FileContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(ParadoxParserWS)
}

func (s *FileContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(ParadoxParserWS, i)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.ExitFile(s)
	}
}

func (p *ParadoxParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ParadoxParserRULE_file)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&100729342) != 0 {
		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case ParadoxParserID, ParadoxParserNUMBER, ParadoxParserSTRING, ParadoxParserDEFINE, ParadoxParserINSERT, ParadoxParserREGISTER_VARIABLE, ParadoxParserVAR, ParadoxParserCALC_START, ParadoxParserLBRACE:
			{
				p.SetState(30)
				p.Statement()
			}

		case ParadoxParserCOMMENT:
			{
				p.SetState(31)
				p.Match(ParadoxParserCOMMENT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		case ParadoxParserWS:
			{
				p.SetState(32)
				p.Match(ParadoxParserWS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(38)
		p.Match(ParadoxParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Assignment() IAssignmentContext
	MacroDefinition() IMacroDefinitionContext
	MacroInsert() IMacroInsertContext
	VariableDefinition() IVariableDefinitionContext
	Calculation() ICalculationContext
	ValueOnly() IValueOnlyContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Assignment() IAssignmentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignmentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignmentContext)
}

func (s *StatementContext) MacroDefinition() IMacroDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMacroDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMacroDefinitionContext)
}

func (s *StatementContext) MacroInsert() IMacroInsertContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMacroInsertContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMacroInsertContext)
}

func (s *StatementContext) VariableDefinition() IVariableDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableDefinitionContext)
}

func (s *StatementContext) Calculation() ICalculationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICalculationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICalculationContext)
}

func (s *StatementContext) ValueOnly() IValueOnlyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueOnlyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueOnlyContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *ParadoxParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ParadoxParserRULE_statement)
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(40)
			p.Assignment()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(41)
			p.MacroDefinition()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(42)
			p.MacroInsert()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(43)
			p.VariableDefinition()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(44)
			p.Calculation()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(45)
			p.ValueOnly()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAssignmentContext is an interface to support dynamic dispatch.
type IAssignmentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Key() IKeyContext
	Comparator() IComparatorContext
	Value() IValueContext

	// IsAssignmentContext differentiates from other interfaces.
	IsAssignmentContext()
}

type AssignmentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignmentContext() *AssignmentContext {
	var p = new(AssignmentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_assignment
	return p
}

func InitEmptyAssignmentContext(p *AssignmentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_assignment
}

func (*AssignmentContext) IsAssignmentContext() {}

func NewAssignmentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignmentContext {
	var p = new(AssignmentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_assignment

	return p
}

func (s *AssignmentContext) GetParser() antlr.Parser { return s.parser }

func (s *AssignmentContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *AssignmentContext) Comparator() IComparatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparatorContext)
}

func (s *AssignmentContext) Value() IValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *AssignmentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssignmentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AssignmentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.EnterAssignment(s)
	}
}

func (s *AssignmentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.ExitAssignment(s)
	}
}

func (p *ParadoxParser) Assignment() (localctx IAssignmentContext) {
	localctx = NewAssignmentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ParadoxParserRULE_assignment)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Key()
	}
	{
		p.SetState(49)
		p.Comparator()
	}
	{
		p.SetState(50)
		p.Value()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMacroDefinitionContext is an interface to support dynamic dispatch.
type IMacroDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DEFINE() antlr.TerminalNode
	Key() IKeyContext
	Comparator() IComparatorContext
	BlockBody() IBlockBodyContext

	// IsMacroDefinitionContext differentiates from other interfaces.
	IsMacroDefinitionContext()
}

type MacroDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMacroDefinitionContext() *MacroDefinitionContext {
	var p = new(MacroDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_macroDefinition
	return p
}

func InitEmptyMacroDefinitionContext(p *MacroDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_macroDefinition
}

func (*MacroDefinitionContext) IsMacroDefinitionContext() {}

func NewMacroDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MacroDefinitionContext {
	var p = new(MacroDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_macroDefinition

	return p
}

func (s *MacroDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *MacroDefinitionContext) DEFINE() antlr.TerminalNode {
	return s.GetToken(ParadoxParserDEFINE, 0)
}

func (s *MacroDefinitionContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *MacroDefinitionContext) Comparator() IComparatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparatorContext)
}

func (s *MacroDefinitionContext) BlockBody() IBlockBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockBodyContext)
}

func (s *MacroDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MacroDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MacroDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.EnterMacroDefinition(s)
	}
}

func (s *MacroDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.ExitMacroDefinition(s)
	}
}

func (p *ParadoxParser) MacroDefinition() (localctx IMacroDefinitionContext) {
	localctx = NewMacroDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ParadoxParserRULE_macroDefinition)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(ParadoxParserDEFINE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.Key()
	}
	{
		p.SetState(54)
		p.Comparator()
	}
	{
		p.SetState(55)
		p.BlockBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMacroInsertContext is an interface to support dynamic dispatch.
type IMacroInsertContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INSERT() antlr.TerminalNode
	Key() IKeyContext
	Comparator() IComparatorContext
	BlockBody() IBlockBodyContext

	// IsMacroInsertContext differentiates from other interfaces.
	IsMacroInsertContext()
}

type MacroInsertContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMacroInsertContext() *MacroInsertContext {
	var p = new(MacroInsertContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_macroInsert
	return p
}

func InitEmptyMacroInsertContext(p *MacroInsertContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_macroInsert
}

func (*MacroInsertContext) IsMacroInsertContext() {}

func NewMacroInsertContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MacroInsertContext {
	var p = new(MacroInsertContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_macroInsert

	return p
}

func (s *MacroInsertContext) GetParser() antlr.Parser { return s.parser }

func (s *MacroInsertContext) INSERT() antlr.TerminalNode {
	return s.GetToken(ParadoxParserINSERT, 0)
}

func (s *MacroInsertContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *MacroInsertContext) Comparator() IComparatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparatorContext)
}

func (s *MacroInsertContext) BlockBody() IBlockBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockBodyContext)
}

func (s *MacroInsertContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MacroInsertContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MacroInsertContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.EnterMacroInsert(s)
	}
}

func (s *MacroInsertContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParadoxListener); ok {
		listenerT.ExitMacroInsert(s)
	}
}

func (p *ParadoxParser) MacroInsert() (localctx IMacroInsertContext) {
	localctx = NewMacroInsertContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ParadoxParserRULE_macroInsert)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.Match(ParadoxParserINSERT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(58)
		p.Key()
	}
	{
		p.SetState(59)
		p.Comparator()
	}
	{
		p.SetState(60)
		p.BlockBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVariableDefinitionContext is an interface to support dynamic dispatch.
type IVariableDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VAR() antlr.TerminalNode
	Comparator() IComparatorContext
	Value() IValueContext
	REGISTER_VARIABLE() antlr.TerminalNode
	Key() IKeyContext

	// IsVariableDefinitionContext differentiates from other interfaces.
	IsVariableDefinitionContext()
}

type VariableDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableDefinitionContext() *VariableDefinitionContext {
	var p = new(VariableDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_variableDefinition
	return p
}

func InitEmptyVariableDefinitionContext(p *VariableDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParadoxParserRULE_variableDefinition
}

func (*VariableDefinitionContext) IsVariableDefinitionContext() {}

func NewVariableDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableDefinitionContext {
	var p = new(VariableDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParadoxParserRULE_variableDefinition

	return p
}

func (s *VariableDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableDefinitionContext) VAR() antlr.TerminalNode {
	return s.GetToken(ParadoxParserVAR, 0)
}

func (s *VariableDefinitionContext) Comparator() IComparatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparatorContext)
}

func (s *VariableDefinitionContext) Value() IValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *VariableDefinitionContext) REGISTER_VARIABLE() antlr.TerminalNode {
	return s.GetToken(ParadoxParserREGISTER_VARIABLE, 0)
}

func (s *VariableDefinitionContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}
